--- a/web/login.html
+++ b/web/login.html
@@ -8,11 +8,11 @@
 
 </body>
 <center>
-    <h2>发起HTTP get请求</h2>
-    <form action="hi" method="get">
+    <h2>用户登录</h2>
+    <form action="login" method="get">
         <p>账号：<input type="text" name="name"/></p>
         <p>密码：<input type="text" name="passWord"/></p>
-        <input type="submit" value="提交"/>
+        <input type="submit" value="登录"/>
     </form>
 </center>
 </html>
